force-app/main/default/objects/Response__c/fields/Job_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Applicants</label>
    <referenceTo>Job_Applicants__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>